Final Review, resolved spacing issues

--- a/css/index.css
+++ b/css/index.css
@@ -155,20 +155,15 @@ h5 {
 
 .container {
   width: 876px;
+  margin: 0 20px;
 }
 
-@media (max-width: 500px) {
-  /* .container {
-    width: 500px;
-
-    box-sizing: content-box;
-  } */
-
+/* @media (max-width: 500px) {
   .container {
     max-width: 500px;
     width: 100%;
   }
-}
+} */
 
 header nav {
   margin-top: 20px;
@@ -178,25 +173,21 @@ header nav {
   align-items: center;
 }
 
-@media (max-width: 500px) {
+/* @media (max-width: 500px) {
   header nav {
     margin-top: 0;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-  }
+  } */
 
-  .logo {
-    order: -1;
-  }
-}
 
 header nav a {
   text-decoration: none;
   color: lightgrey;
 }
 
-@media (max-width: 500px) {
+/* @media (max-width: 500px) {
   header nav a {
     font-size: 15pt;
     width: 100%;
@@ -205,12 +196,12 @@ header nav a {
     justify-content: center;
     border-bottom: 1px solid black;
   }
-}
+} */
 
 .top-title {
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-evenly;
+  justify-content: flex-end;
   border-bottom: 1px solid black;
   padding: 40px 0;
 }
@@ -220,6 +211,7 @@ header nav a {
   flex-flow: column wrap;
   align-content: center;
   justify-content: center;
+  width: 50%;
 }
 
 .top-title .title-text {
@@ -243,11 +235,11 @@ header nav a {
   align-self: center;
   justify-content: center;
 }
-@media (max-width: 500px) {
+/* @media (max-width: 500px) {
   .top-title .title-right .top-img {
     display: none;
   }
-}
+} */
 .top-content {
   display: flex;
   flex: 1;
@@ -255,17 +247,20 @@ header nav a {
   flex-wrap: wrap;
 }
 
-@media (max-width: 500px) {
+/* @media (max-width: 500px) {
   .top-content {
     flex-flow: column wrap;
     margin-top: 20px;
   }
-}
+} */
 .container .text-half {
   margin: 45px 0;
   width: 49%;
 }
-@media (max-width: 500px) {
+
+
+
+/* @media (max-width: 500px) {
   .container .text-half {
     margin: 25px 0;
     width: 100%;
@@ -278,7 +273,7 @@ header nav a {
     max-width: 500px;
     min-width: 0px;
   }
-}
+} */
 .bottom-content {
   display: flex;
   flex: 1;
@@ -287,23 +282,17 @@ header nav a {
   border-bottom: 1px solid black;
 }
 
-@media (max-width: 500px) {
-  .bottom-content {
-    flex-flow: column wrap;
-  }
-}
-
 .container .text-third {
   width: 33%;
   margin: 45px 0;
 }
 
-@media (max-width: 500px) {
+/* @media (max-width: 500px) {
   .container .text-third {
     margin: 25px 0;
     width: 100%;
   }
-}
+} */
 
 .contact {
   margin: 35px 0;
@@ -327,7 +316,7 @@ footer {
   .container {
     max-width: 800px;
     width: 100%;
-    /* margin: 5px 20px; */
+    margin: 5px 20px;
   }
   header nav {
     margin-top: 0;
@@ -349,7 +338,8 @@ footer {
     text-align: center;
     justify-content: center;
     padding-left: 35px;
-    margin-bottom: 40px;
+	margin-bottom: 30px;
+	margin-top: 10px;
     /* margin: 30px 0 38px 0; */
     /* padding-left: 30px; */
   }
@@ -382,32 +372,101 @@ footer {
   }
 
   .top-content {
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: space-between;
-	padding: 0 10px;
-	flex-shrink: 1;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    padding: 0 10px;
+    flex-shrink: 1;
   }
 
   section.top-content img {
-	  max-width: 100%;
+    max-width: 100%;
   }
-
 
   section.bottom-content {
     padding: 0 10px;
     display: flex;
-	flex-flow: row nowrap;
-		  justify-content: space-between;
-
+    flex-flow: row nowrap;
+    justify-content: space-between;
   }
 
   .container .text-third {
-	  width: 30%;
+    width: 30%;
   }
 
   section.contact {
     margin: 20px 20px;
     padding: 0 10px;
+  }
+}
+
+@media (max-width: 500px) {
+  .container {
+    max-width: 500px;
+    width: 100%;
+  }
+  header nav {
+	margin-top: 0;
+	padding: 0;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+  }
+  .logo {
+    order: -1;
+  }
+  header nav a {
+    font-size: 15pt;
+    width: 100%;
+    text-decoration: none;
+    color: lightgrey;
+    text-align: center;
+    padding: 20px 0;
+    justify-content: center;
+    border-bottom: 1px solid black;
+  }
+
+  header nav a.logo {
+	  margin-top: 0;
+	  margin-bottom: 0;
+  }
+
+  .top-title {
+	  margin: 0;
+	  display: flex;
+	  flex-direction: column;
+	  text-align: center;
+	  width: 100%;
+	  border-bottom: none;
+	  
+
+  }
+
+  .top-title .title-left {
+	  padding: 0;
+  }
+  .top-title .title-right .top-img {
+    display: none;
+  }
+  .top-content {
+    flex-flow: column wrap;
+	margin-top: 20px;
+	border-top: 1px solid black;
+  }
+  .container .text-half {
+    margin: 25px 0;
+    width: 100%;
+  }
+  .top-content img.middle-img {
+    margin: 20px 0;
+    display: flex;
+    max-width: 100%;
+  }
+  section.bottom-content {
+    flex-flow: column wrap;
+  }
+  .container .text-third {
+    margin: 25px 0;
+    width: 100%;
   }
 }
